tests/snapshots/js_t__js_t_reset_combined_with_new_values.snap
---
source: tests/js_t.rs
---
import { t } from '@lingui/core/macro';
/* lingui-set context="first" comment="second" */
const msg1 = t`Hello`
/* lingui-reset context="fresh" */
const msg2 = t`World`

↓ ↓ ↓ ↓ ↓ ↓

import { i18n as $_i18n } from "@lingui/core";
/* lingui-set context="first" comment="second" */ const msg1 = $_i18n._(/*i18n*/ {
    id: "VUeJYD",
    message: "Hello",
    comment: "second",
    context: "first"
});
/* lingui-reset context="fresh" */ const msg2 = $_i18n._(/*i18n*/ {
    id: "aENyP6",
    message: "World",
    context: "fresh"
});
